syntax = "proto3";

option csharp_namespace = "MCB.Demos.Orders.Microservices.Customers.Ports.GRPCService.Protos.GetCustomers";

package customers;

service Customers {
	rpc GetCustomers (GetCustomersRequest) returns (GetCustomersReply);
}

message GetCustomersRequest {}

message GetCustomersReply {
	repeated Customer customerArray  = 1;
}

message Customer {
	string code = 1;
	string name = 2;
}